--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cloud_firestore: ^4.15.9
   firebase_storage: ^11.6.10
   firebase_messaging: ^14.7.20
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
