tab screen modified

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_storage: ^11.6.10
   firebase_messaging: ^14.7.20
   geolocator: ^11.0.0
+  flutter_image_slider: ^0.0.2
 
   
 
