otp screen changes done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_messaging: ^14.7.20
   geolocator: ^11.0.0
   flutter_image_slider: ^0.0.2
+  firebase_app_check: ^0.2.1+18
   
 
   
