changes made to implement google signin

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.dating_app"
-    compileSdk flutter.compileSdkVersion
+    compileSdk 33 //flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -51,6 +51,8 @@ android {
         versionName flutterVersionName
         multiDexEnabled true
     }
+
+    apply plugin: 'com.google.gms.google-services'
 
     
   configurations.all {
@@ -79,11 +81,10 @@ flutter {
 dependencies {
     // Import the BoM for the Firebase platform
     implementation(platform("com.google.firebase:firebase-bom:32.7.4"))
-
+    
     // Add the dependencies for the App Check libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation("com.google.firebase:firebase-appcheck-playintegrity")
 
 }
 
-apply plugin: 'com.google.gms.google-services'
