--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   geolocator: ^11.0.0
   flutter_image_slider: ^0.0.2
   firebase_app_check: ^0.2.1+18
+  google_sign_in: ^6.2.1
   
 
   
