--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_image_slider: ^0.0.2
   firebase_app_check: ^0.2.1+18
   google_sign_in: ^6.2.1
+  fluttertoast: ^8.2.4
+  intl_phone_field_with_validator: ^0.2.0
   
 
   
